[INFER] Remove bogus assert, bug 642758.